fixed scroll bar appearing unnecessarily on find-a-job job list on ie11

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -333,9 +333,7 @@
 
   &__view-list-container
     @include bp('portrait')
-      overflow-y: scroll
-
-
+      overflow-y: auto
 
   // FADING:
   // https://codepen.io/anon/pen/opBRLp
